--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Ncsp</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
